Archive2/d3/665fa98f3b0432/output
main.cpp:7:4: error: 'd' declared as reference but not initialized
 D &d;
    ^
